log
Fri, Apr 18, 2025 12:22:14 AM: 
 hashmap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:58:22: error: 'Pair {aka struct Pair}' has no member named 'next'
             aux = aux->next;
                      ^~
hashmap.c:60:17: error: 'Pair {aka struct Pair}' has no member named 'next'
         new_pair->next = map->buckets[hash_value];
                 ^~
eeef3b7
Sat, Apr 19, 2025  8:17:01 PM: 
 hashmap.c | 24 ------------------------
 1 file changed, 24 deletions(-)
 tests:  0|6
total_score: 0/70
68252ea
Sat, Apr 19, 2025  8:17:41 PM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|5
total_score: 10/70
d57c4c2
Sat, Apr 19, 2025  8:21:20 PM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  5|4
total_score: 30/70
94086f2
